--- a/templates/marry_check/marry_check_info.html
+++ b/templates/marry_check/marry_check_info.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html style="height:100%;width:100%;" ng-app="all" ng-controller="MarryCheck">
+<html style="height:100%;width:100%;" ng-app="all" ng-controller="MarryCheck"  class='ng-cloak'>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" href="marry_check_info.css">
