--- a/templates/marry_check/marry_check_info.html
+++ b/templates/marry_check/marry_check_info.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html style="height:100%;width:100%;" ng-app="all" ng-controller="MarryCheck"  class='ng-cloak'>
+<html style="height:100%;width:100%;" ng-app="all" ng-controller="MarryCheck"  >
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" href="marry_check_info.css">
@@ -14,7 +14,7 @@
 				pluginspage="install_lodop.exe"></embed>
 		</object>
 		<script type="text/javascript" src="/js/printProtectPage.js"></script>
-		<body >
+		<body class='ng-cloak'>
 		<div class = 'toolbar'>
 			<a id='btn_save' class="btn" ng-click="save()" >保存</a>
 			<!-- <a class="btn" ng-click="newExam()" >新建</a> -->
